# lerobot-mujoco-manipulation

./: .gitignore  PROJECT_PLAN.md  TEST.md  pyproject.toml
.github/workflows/: ci.yml
analysis/: pi0_eval_performance_analysis_20260528.md
assets/manifests/: asset_sources.yaml
assets/mujoco/tasks/: pick_place_mug.xml  pick_place_mug_ur3e.xml
configs/envs/: omy_pick_place.yaml  ur3e_ag95_pick_place.yaml
configs/experiments/: omy_dummy_pick_place.yaml  omy_smolvla_pick_place.yaml  ur3e_ag95_dummy_pick_place.yaml
configs/policies/: dummy.yaml  pi0.yaml  pi05.yaml  smolvla.yaml
configs/robots/: omy.yaml  ur3e_ag95.yaml
constraints/: core.txt  lerobot.txt
requirements/: base.txt  dev.txt  lerobot.txt  lingbot.txt
scripts/: collect_demo.py  curate_dataset.py  eval_policy.py  mujoco_render_benchmark.py  replay_episode.py  rollout_policy.py  train_policy.py  validate_assets.py  validate_dataset.py  view_ur3e_scene.py
src/robot_vla_mujoco/: __init__.py
src/robot_vla_mujoco/assets/: __init__.py  mesh_tools.py  mjcf_loader.py  scene_builder.py
src/robot_vla_mujoco/common/: config.py  logging.py  registry.py  seed.py  types.py
src/robot_vla_mujoco/datasets/: collect_scripted.py  collect_teleop.py  curate.py  lerobot_writer.py  metadata.py  replay.py  validate.py
src/robot_vla_mujoco/envs/: __init__.py  base.py  mujoco_env.py  success_conditions.py  vector_env.py
src/robot_vla_mujoco/eval/: __init__.py  metrics.py
src/robot_vla_mujoco/inference/: __init__.py  closed_loop.py  evaluate_sim.py  rollout.py
tests/: test_env_smoke.py  test_mjcf_load.py
(+18 files in other folders)
